# calc

./: CMakeLists.txt  README.md  main.cpp  stdafx.h
core/: ASTNode.h  Equation.h  Evaluator.h  Parser.h  Token.h
exception/: EquationException.h  EvaluatorException.h  ParserException.h
util/: enums.h
